--- a/src/react-client/public/index.html
+++ b/src/react-client/public/index.html
@@ -17,13 +17,7 @@
     -->
     <title>React Client</title>
   </head>
-  <body
-    style="
-      transition-property: all;
-      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-      transition-duration: 150ms;
-    "
-  >
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
