--- a/src/react-client/public/index.html
+++ b/src/react-client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Application for streaming movies" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,7 +15,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Client</title>
+    <title>NextFelix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
